# mybooks

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  commands.txt
.sqlx/: query-4b33a7f9f05b54267494188429f659480ecc3702df63e710e07b38ec4cc8774e.json  query-4d0043f1ed9fbf4b991b7d5c7b5832b73cf58db920860dbdd18d3ca788a7c4ab.json  query-6fe703919f4eb36051e9aa9357a28f45df0ed47d9a92cb3d6f71626b43f38310.json  query-721b18a9dde2c08783154f5190e535a8298d9f8c28409d5e6e0d85ac80962393.json  query-79f51becdfcb8438398d8de553e87f241e9678197d48e70c5a9fa8237b379f27.json  query-8e4dbe136e46135f83e58cf6587eb810797834581d31e593024204ca98282420.json  query-bde3f8ae993bfa3e5f5520acbc08061d799802967ca025db8accc371156bbc26.json  query-c0581c1fcf025269affc1cd82a7fc5735aed31cd38609a789994155437f67caa.json  query-cc1ed8c53f6a1c85ab519c5082ab371674c3103b9b549896308b876e269ea3a7.json  query-cc870b7cf99d0200fc461c48cf90f62a4a210eba1bbd1a917b17c80231d13250.json  query-d5762320f5d1044b91c4187a47e8645e32fbbec4d59686c28fa5acabdbf1ee75.json  query-d90359798a6cdff6f5af553f5b89e0c8d099070cd0dffb574a755be019092a9a.json
compose/: compose.yaml  init.sql
migrations/: 20260329111615_create_items.sql  20260331183151_create_authors_and_series.sql
src/: app.rs  domain.rs  main.rs  state.rs
src/domain/books/: author.rs  (+15 more)
src/handlers/: author.rs  books.rs  genre.rs  mod.rs  series.rs
src/repo/: author_repo.rs  book_repo.rs  genre_repo.rs  mod.rs  series_repo.rs
src/service/: author_service.rs  book_service.rs  genre_service.rs  mod.rs  series_service.rs
trashbin/: requests.html  requests.sql
(+2 files in other folders)
