[package]
name = "mybooks"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version = "0.8.9", features = ["macros"]}
tokio = {version = "1.50.0", features = ["full"]}
serde = { version = "1.0.228", features = ["derive"] }
sqlx = {version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls", "uuid", "derive", "chrono"]}
dotenv = "0.15.0"
chrono = { version = "0.4.44", features = ["serde"] }
tracing = { version = "0.1.44", features = ["attributes"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
